# smriti

./: .gitignore  CLAUDE.md  NOTICE.md  README.md  pyproject.toml
.ai/: todo.md
.ai/knowledge/: architecture.md  conventions.md  glossary.md  lessons-learned.md  spec.md
docs/: ARCHITECTURE.md  INSTALL.md  PRIVACY.md
memory_template/: README.md  identity.md
memory_template/mind/: mind.md
memory_template/mind/desires/: beliefs.md  desires.md  values.md
memory_template/mind/practices/: practices.md
memory_template/open-threads/: open-threads.md
memory_template/open-threads/heartbeat/: README.md
memory_template/open-threads/tasks/: tasks.md
memory_template/people/: people.md
narada/: wake.md
narada/.smriti/: narada-p.sh  wake.py
project_template/: .gitignore  CLAUDE.md
project_template/.ai/: todo.md
project_template/.ai/knowledge/: architecture.md  conventions.md  glossary.md  lessons-learned.md  spec.md
scripts/: install.py  setup_project.py
src/smriti/: __init__.py  cli.py  mcp_server.py  metrics.py  watcher.py
src/smriti/_vendored/: __init__.py
src/smriti/_vendored/memsearch/: __init__.py  chunker.py  reranker.py  scanner.py  watcher.py
src/smriti/_vendored/memsearch/embeddings/: __init__.py
src/smriti/core/: __init__.py  tree.py
src/smriti/eval/: __init__.py  cases.py  metrics.py  report.py  runner.py
src/smriti/hooks/: precompact_capture.py
src/smriti/private/: README.template.md  __init__.py  audit.py  store.py
src/smriti/store/: __init__.py  api_backend.py  cascade.py  consolidate.py  indexer.py  ingest.py  journal_rollup.py  judge.py  queue.py  router.py  schema.py  search.py  wake_summary.py  writer.py
tests/: test_cascade.py  test_config_lint.py  test_consolidate.py  test_ingest.py  test_mcp.py  test_router.py  test_store.py  test_wake.py  test_watcher.py
